--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+     "@sendgrid/mail": "^8.1.6",
+    "aos": "^2.3.4",
+    "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.544.0",
+    "mongodb": "^6.20.0",
+    "next": "^15.5.4",
+    "nodemailer": "^7.0.7",
+    "postcss": "^8.5.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-type-animation": "^3.2.0",
+    "swiper": "^12.0.2",
+    "tailwindcss": "^3.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
