--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
     "swiper": "^12.0.2",
